--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,3 +12,6 @@ COPY . /app/
 RUN chmod +x /app/entrypoint.sh
 
 EXPOSE 8000
+
+ENTRYPOINT ["/app/entrypoint.sh"]
+CMD ["sh", "-c", "python manage.py runserver 0.0.0.0:${PORT:-8000}"]
