--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,16 +21,18 @@ services:
     environment:
       DEBUG: "true"
       SECRET_KEY: "unsafe-dev-key"
+      ALLOWED_HOSTS: localhost,127.0.0.1,0.0.0.0,backend
       POSTGRES_DB: ${POSTGRES_DB:-shop}
       POSTGRES_USER: ${POSTGRES_USER:-shop}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-shop}
       POSTGRES_HOST: db
       POSTGRES_PORT: "5432"
-      CORS_ALLOWED_ORIGINS: http://localhost:5173
-      CSRF_TRUSTED_ORIGINS: http://localhost:5173
+      # CORS_ALLOWED_ORIGINS: http://localhost:5173
+      # CSRF_TRUSTED_ORIGINS: http://localhost:5173
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME:-admin}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD:-admin123}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL:-admin@example.com}
+      DATABASE_URL: ""
     ports:
       - "8000:8000"
     depends_on:
@@ -44,7 +46,7 @@ services:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
     environment:
-      VITE_API_BASE_URL: http://localhost:8000/api
+      VITE_API_BASE_URL: /api
     ports:
       - "5173:5173"
     depends_on:
